--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flags-select": "^2.2.3",
+    "react-i18next": "^12.1.4",
     "styled-components": "^5.3.6"
   }
 }
