--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "i18next": "^22.4.9",
     "next": "13.1.6",
     "next-i18next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-i18next": "^12.1.4",
     "styled-components": "^5.3.6"
   }
 }
